tests/NormalTests/paczka2/big_fuzzy/96962436.err
Error in line 6: sPA S195 69,9
Error in line 9: aJ4J S195 167,9
Error in line 11: sPA A214 3,4
Error in line 23: RHb8 A214 6,56
Error in line 33: A214 S195 37,3
Error in line 44: RHb8 S605 326,77
Error in line 37: LG1AMFS S605 28,6
Error in line 51: A214 A214 56,2
Error in line 42: RHb8 S605 76,5
Error in line 69: RHb8 A859 302,1
Error in line 74: RHb8 S195 40,68
Error in line 78: A214 A214 45,8
Error in line 90: GTdMW S605 26,0
Error in line 82: A214 A859 79,3
Error in line 112: A214 S605 54,0
Error in line 120: *214 *214 362,3
Error in line 122: aJ4J S195 93,17
Error in line 108: GTdMW S195 60,5
Error in line 118: A214 A214 74,7
Error in line 127: LG1AMFS S605 67,87
Error in line 128: A214 S195 62,2
Error in line 126: aJ4J S605 25,5
Error in line 121: LG1AMFS S605 46,7
Error in line 166: sPA S195 23,5
Error in line 174: jrEsUQK5gH S195 73,2
Error in line 180: sPA S605 32,72
Error in line 183: GTdMW A214 66,1
Error in line 190: LG1AMFS S605 71,2
Error in line 129: RHb8 S195 20,1
Error in line 185: GTdMW S195 56,7
Error in line 169: sPA S605 14,3
Error in line 196: sPA A859 93,3
Error in line 198: LG1AMFS A859 60,2
Error in line 192: RHb8 A214 20,2
Error in line 203: LG1AMFS A214 43,7
Error in line 213: LG1AMFS A859 81,2
Error in line 220: LG1AMFS S605 83,1
Error in line 224: LG1AMFS A859 36,0
Error in line 237: sPA A859 16,0
Error in line 230: A214 S195 22,3
